syntax = "proto3";

option csharp_namespace = "Category.GRPC.Protos";

service CategoryProtoService {
  rpc GetCategoryById(GetCategoryRequest) returns (CategoryModel);
}

message GetCategoryRequest {
  int64 id = 1;
}

message CategoryModel {
  int64 id = 1;
  string name = 2;
  string slug = 3;
}